fix alignent for headings

--- a/index.css
+++ b/index.css
@@ -27,12 +27,12 @@ h2 {
     margin-top: 40px;
     font-size: 60px;
     margin-bottom: 0px;
+    text-align: center;
 }
 
 p {
     font-size: 30px;
     max-width: 700px;
-    width: 100%;
     margin-bottom: 10px;
 }
 
